[gd_scene load_steps=2 format=2]

[ext_resource path="res://DeleteFile.gd" type="Script" id=1]

[node name="DeleteFile" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
window_title = "Delete File"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 580.0
margin_bottom = 655.0

[node name="FileTree" type="Tree" parent="MarginContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 631.0
size_flags_vertical = 3
columns = 2
hide_folding = true
hide_root = true
select_mode = 2

[node name="WarningLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 317.0
margin_right = 580.0
margin_bottom = 631.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[img]res://assets/textures/warning.png[/img] No files were found that have the json extension."
text = " No files were found that have the json extension."

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 635.0
margin_right = 580.0
margin_bottom = 655.0

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 288.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 292.0
margin_right = 580.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Delete File"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
dialog_autowrap = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0

[connection signal="multi_selected" from="MarginContainer/VBoxContainer/FileTree" to="." method="_on_FileTree_multi_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
